--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Blog App</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="tab_text_1">Profile</string>
+    <string name="tab_text_2">Timeline</string>
+    <string name="tab_text_3">Settings</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
